creating program flow

--- a/src/main/resources/MessagesBundle.properties
+++ b/src/main/resources/MessagesBundle.properties
@@ -1,5 +1,5 @@
 introduction = Let's play a game - Lottery\nEnter six numbers and check what did you win
-numberNext = Please enter a number between %d and $d
+numberNext = Please enter a number between %d and %d
 numberCorrect = Number saved
 numberEmpty = I am sorry, but this is not a number
 numberOutOfBound = Given number is not valid. It should be between range %d-%d\n
